# gff

./: CMakeLists.txt  README.md  gff-config.cmake.in
.github/workflows/: test.yml
src/: aux.h  error.c  error.h  fsm.c  fsm.h  gff.c  region.h  state.h  strlcpy.c  tok.c  tok.h  unused.h
src/gff/: aux.h  elem.h  error.h  feature.h  gff.h  rc.h  region.h  strlcpy.h  target.h  tok.h
test/: CMakeLists.txt  break.c  gff_read.c  gff_write.c
test/assets/: corrupted1.gff  corrupted2.gff  example1.gff  example2.gff  example5.gff
